only styling left

--- a/index.html
+++ b/index.html
@@ -23,14 +23,11 @@
                 <div class="game-box" id="box-9"></div>
             </div>
         </div>
-        <button id="single-play">Single Play</button>
+        <button id="single-play">Multi Player</button>
         <div id="form-container">
             <form action="" method="post" id="form">
                 <p id="close">&times</p>
-                <div id="name">
-                    <label for="player-name" class="player-name">Player Name</label>
-                    <input type="text" name="player-name" id="player-name" required>
-                </div>
+                <p>please! choose player 1 icon</p>
                 <div id="player-icon">
                     <label for="cross">Cross</label>
                     <input type="radio" name="icon" id="icon" value="X" required>
